syntax = "proto3";

option go_package =".;proto";

import "google/protobuf/timestamp.proto";

service Greeter {
  rpc SayHello (HelloRequest) returns (HelloReply) {}
}

message HelloRequest {
  string name = 1;
  google.protobuf.Timestamp request_time = 2;
}

message HelloReply {
  string message = 1;
}